--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>SparklesSec</title>
+  </head>
+  <body>
+    <h1 align="center">Test</h1>
+  </body>
+</html>
